[gd_scene load_steps=15 format=3 uid="uid://c8uwqccai6ipw"]

[ext_resource type="Script" uid="uid://da3ij6fbtjpr7" path="res://player.gd" id="1_jjvhh"]
[ext_resource type="Texture2D" uid="uid://dh6x4sp2a2aeq" path="res://Sprites/Wisteria.png" id="2_kry3j"]
[ext_resource type="Script" uid="uid://dmnc643jg62hx" path="res://Scenes/artlings.gd" id="3_6bp64"]
[ext_resource type="Script" uid="uid://be70qoerg2e18" path="res://npc.gd" id="3_21xkr"]
[ext_resource type="Texture2D" uid="uid://brfcux56aqu0v" path="res://Sprites/Batch2Ax.png" id="4_6bp64"]
[ext_resource type="Script" uid="uid://bv8ejghgsp7b8" path="res://Scenes/example_npc_mon.gd" id="6_21xkr"]
[ext_resource type="Texture2D" uid="uid://dqu6gn70inii6" path="res://Sprites/Assets_Juice_WarriorBush.png" id="7_6bp64"]
[ext_resource type="PackedScene" uid="uid://7s7no85rfxwl" path="res://Sprites/old_tree.gltf" id="8_344ge"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_21xkr"]
albedo_color = Color(0.145098, 0.396078, 0.121569, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1bvp3"]
radius = 0.567294
height = 1.40815

[sub_resource type="SpriteFrames" id="SpriteFrames_lquwl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kry3j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_1bvp3"]
radius = 1.05442

[sub_resource type="SpriteFrames" id="SpriteFrames_21xkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6bp64")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Environment" id="Environment_kry3j"]
background_mode = 1
background_color = Color(0.45338, 0.687618, 0.891915, 1)

[node name="Main" type="Node3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.497048, 0)
material_override = SubResource("StandardMaterial3D_21xkr")
use_collision = true
size = Vector3(20, 1, 20)

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.14439, 0)
script = ExtResource("1_jjvhh")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.952209, 0.305446, 0, -0.305446, 0.952209, 0, 0.834415, 2.38413)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000705719, 0)
shape = SubResource("CapsuleShape3D_1bvp3")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Player"]
pixel_size = 0.0015
sprite_frames = SubResource("SpriteFrames_lquwl")

[node name="Artlings" type="Node" parent="Player"]
script = ExtResource("3_6bp64")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.714379, 0.407022, -0.569206, -0.138299, 0.715264, 0.685034, 0.685956, 0.568095, -0.454679, 0, 6, 0)
light_energy = 3.263
light_indirect_energy = 2.131

[node name="Npc" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.46479, 0.524434, -4.40747)
script = ExtResource("3_21xkr")

[node name="Sprite3D" type="Sprite3D" parent="Npc"]
texture = ExtResource("4_6bp64")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Npc"]
shape = SubResource("SphereShape3D_1bvp3")

[node name="Label3D" type="Label3D" parent="Npc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.74948, 0)
text = "Hello"

[node name="ExampleNpcMon" type="Node3D" parent="Npc" groups=["mon"]]
visible = false
script = ExtResource("6_21xkr")
max_hp = 50
strength = 5
defense = 5
intelligence = 5
mind = 5
speed = 5
element = "Normal"

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Npc/ExampleNpcMon"]
sprite_frames = SubResource("SpriteFrames_21xkr")

[node name="HpBar" type="Label3D" parent="Npc/ExampleNpcMon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.654247, 0)
text = "HP: "

[node name="BattleMarker" type="Marker3D" parent="Npc"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0101146, 2.33541)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kry3j")

[node name="BushTest" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.64227, 0.28244, -1.61858)

[node name="Sprite3D" type="Sprite3D" parent="BushTest"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.460537, 0, 0.508701)
alpha_cut = 1
texture = ExtResource("7_6bp64")

[node name="Sprite3D2" type="Sprite3D" parent="BushTest"]
alpha_cut = 1
texture = ExtResource("7_6bp64")

[node name="old_tree2" parent="." instance=ExtResource("8_344ge")]
transform = Transform3D(0.49953, 0, -0.0216789, 0, 0.5, 0, 0.0216789, 0, 0.49953, 5.19549, 0.164188, 3.3118)

[connection signal="body_entered" from="Npc" to="Npc" method="_on_body_entered"]
[connection signal="body_exited" from="Npc" to="Npc" method="_on_body_exited"]
[connection signal="child_exiting_tree" from="Npc" to="Npc" method="_on_child_exiting_tree"]
